--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
         - Task events: 04-modality-specific-files/03-task-events.md
         - Physiological and other continous recordings: 04-modality-specific-files/04-physiological-and-other-continous-recordings.md
         - Behavioral experiments (with no MRI): 04-modality-specific-files/05-behavioural-experiments.md
+        - intracranial Electroencephalography: 04-modality-specific-files/06-intracranial-electroencephalography.md
+
       - Longitudinal and multi-site studies: 05-longitudinal-and-multi-site-studies.md
       - Extending the BIDS specification: 06-extensions.md
       - Appendix:
